--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -82,7 +82,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div class="col-md-4 slideanim">
 				<h4>Регіональний офіс, м. Ярмолинці :</h4>
-                <p><b>Телефон</b> : (0382)777-120</p>
+                <p><b>Телефон</b> : ‎(03853)3-00-31</p>
                 <p><b>Email</b> : <a href="mailto:name@example.com">name@example.com</a></p>
                 <p><b>Адреса</b> : 29000 Україна, Хмельницька обл., смт. Ярмолинці вул. Чапаєва, 48</p>
             </div>
