--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -88,9 +88,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div class="col-md-4 slideanim">
 				<h4>Регіональний офіс, м. Чемерівці :</h4>
-                <p><b>Телефон</b> : (0382)777-120</p>
+                <p><b>Телефон</b> : ‎(03859)9-26-60</p>
                 <p><b>Email</b> : <a href="mailto:name@example.com">name@example.com</a></p>
-                <p><b>Адреса</b> : 29000 Україна, Хмельницька обл., смт. Чемерівці, вул. Центральна, 29/5</p>
+                <p><b>Адреса</b> : 31600 Україна, Хмельницька обл., смт. Чемерівці, вул. Центральна, 29/4</p>
             </div>
             <div class="clearfix"></div>
         </div>
