--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -89,7 +89,7 @@
 						<div class="bg a0" data-animate="fadeIn">
 							<h3 class="a1" data-animate="fadeInDown">Зв’язатись:</h3>
 							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
-							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-twitter"></i></a>
+							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-facebook"></i></a>
 						</div>
 					</div>
 				</div>
@@ -103,7 +103,7 @@
 						<div class="bg a0" data-animate="fadeIn">
 							<h3 class="a1" data-animate="fadeInDown">ЗВ’ЯЗАТИСЬ:</h3>
 							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
-							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-twitter"></i></a>
+							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-facebook"></i></a>
 						</div>
 					</div>
 				</div>
@@ -117,7 +117,7 @@
 						<div class="bg a0" data-animate="fadeIn">
 							<h3 class="a1" data-animate="fadeInDown">ЗВ’ЯЗАТИСЬ:</h3>
 							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
-							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-twitter"></i></a>
+							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-facebook"></i></a>
 						</div>
 					</div>
 				</div>
@@ -131,7 +131,7 @@
 						<div class="bg a0" data-animate="fadeIn">
 							<h3 class="a1" data-animate="fadeInDown">ЗВ’ЯЗАТИСЬ:</h3>
 							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
-							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-twitter"></i></a>
+							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-facebook"></i></a>
 						</div>
 					</div>
 				</div>
