--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -60,7 +60,7 @@
 <div class="banner">
 	<div id="content">
         <div id="slider">
-			<img src={% static "images/banner1.jpg" %} alt="Розвиток" data-url="#1">
+			<img src={% static "images_agroholding/hoptinsky-120.jpg" %} alt="Розвиток" data-url="#1">
 			<img src={% static "images/banner2.jpg" %} alt="Технології" data-url="#2">
 			<img src={% static "images_agroholding/banner_agro3.jpg" %} alt="Господарство" data-url="#3">
 			<img src={% static "images/banner4.jpg" %} alt="Цілі" data-url="#4">
