--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -60,42 +60,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 {% include 'baner_not_index.html' %}
 <!-- /banner section -->
 <!-- Contact -->
-<section class="contact-us" id="contact">
-	<h3 class="text-center slideanim">Наші контакти</h3>
-	<p class="text-center slideanim">Контакти головного, та регіональних офісів ТОВ "Агрохолдинг 2012"</p>
-	<div class="container">
-		<div class="row">
-{#            <div class="col-md-8 slideanim">#}
-{#                  <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d380510.6741687111!2d-88.01234121699822!3d41.83390417061058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1455598377120" style="border:0" allowfullscreen></iframe>#}
-{#            </div>#}
-            <div class="col-md-4 slideanim">
-				<h4>Головний офіс, м. Хмельницький :</h4>
-                <p><b>Телефон</b> : (0382)777-120</p>
-                <p><b>Email</b> : <a href="mailto:name@example.com">name@example.com</a></p>
-                <p><b>Адреса</b> : 29000 Україна, м. Хмельницький, вул. Свободи, 79</p>
-            </div>
-            <div class="col-md-4 slideanim">
-				<h4>Регіональний офіс, м. Городок :</h4>
-                <p><b>Телефон</b> : (0382)777-120</p>
-                <p><b>Email</b> : <a href="mailto:name@example.com">name@example.com</a></p>
-                <p><b>Адреса</b> : 29000 Україна, Хмельницька обл., м. Городок, вул. Грушевського, 59</p>
-            </div>
-            <div class="col-md-4 slideanim">
-				<h4>Регіональний офіс, м. Ярмолинці :</h4>
-                <p><b>Телефон</b> : ‎(03853)3-00-31</p>
-                <p><b>Email</b> : <a href="mailto:name@example.com">name@example.com</a></p>
-                <p><b>Адреса</b> : 29000 Україна, Хмельницька обл., смт. Ярмолинці вул. Чапаєва, 48</p>
-            </div>
-            <div class="col-md-4 slideanim">
-				<h4>Регіональний офіс, м. Чемерівці :</h4>
-                <p><b>Телефон</b> : ‎(03859)9-26-60</p>
-                <p><b>Email</b> : <a href="mailto:name@example.com">name@example.com</a></p>
-                <p><b>Адреса</b> : 31600 Україна, Хмельницька обл., смт. Чемерівці, вул. Центральна, 29/4</p>
-            </div>
-            <div class="clearfix"></div>
-        </div>
-    </div>
-</section>
+{% block offices %}
+{% endblock offices %}
 <section class="contact-form">
 	<h3 class="text-center slideanim">Написати нам</h3>
 	<p class="text-center slideanim">Будь-ласка, вкажіть ваші данні, та напишіть текст повідомлення нижче</p>
