--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -62,40 +62,40 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- Contact -->
 {% block offices %}
 {% endblock offices %}
-<section class="contact-form">
-	<h3 class="text-center slideanim">Написати нам</h3>
-	<p class="text-center slideanim">Будь-ласка, вкажіть ваші данні, та напишіть текст повідомлення нижче</p>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 slideanim">
-				<form action="#" method="post">
-					<div class="row">
-						<div class="form-group col-lg-4">
-							<label>Ім'я</label>
-							<input type="text" name="name" class="form-control" placeholder="" required>
-						</div>
-						<div class="form-group col-lg-4">
-							<label>Email</label>
-							<input type="email" name="email" class="form-control" placeholder="" required>
-						</div>
-						<div class="form-group col-lg-4">
-							<label>Телефон</label>
-							<input type="tel" name="phone" class="form-control" placeholder="" required>
-						</div>
-						<div class="clearfix"></div>
-						<div class="form-group col-lg-12">
-							<label>Повідомлення</label>
-							<textarea name="message" class="form-control" rows="6" placeholder="" required></textarea>
-						</div>
-						<div class="form-group col-lg-12">
-							<button type="submit" class="btn btn-lg btn-outline">Надіслати</button>
-						</div>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-</section>
+{#<section class="contact-form">#}
+{#	<h3 class="text-center slideanim">Написати нам</h3>#}
+{#	<p class="text-center slideanim">Будь-ласка, вкажіть ваші данні, та напишіть текст повідомлення нижче</p>#}
+{#	<div class="container">#}
+{#		<div class="row">#}
+{#			<div class="col-lg-12 slideanim">#}
+{#				<form action="#" method="post">#}
+{#					<div class="row">#}
+{#						<div class="form-group col-lg-4">#}
+{#							<label>Ім'я</label>#}
+{#							<input type="text" name="name" class="form-control" placeholder="" required>#}
+{#						</div>#}
+{#						<div class="form-group col-lg-4">#}
+{#							<label>Email</label>#}
+{#							<input type="email" name="email" class="form-control" placeholder="" required>#}
+{#						</div>#}
+{#						<div class="form-group col-lg-4">#}
+{#							<label>Телефон</label>#}
+{#							<input type="tel" name="phone" class="form-control" placeholder="" required>#}
+{#						</div>#}
+{#						<div class="clearfix"></div>#}
+{#						<div class="form-group col-lg-12">#}
+{#							<label>Повідомлення</label>#}
+{#							<textarea name="message" class="form-control" rows="6" placeholder="" required></textarea>#}
+{#						</div>#}
+{#						<div class="form-group col-lg-12">#}
+{#							<button type="submit" class="btn btn-lg btn-outline">Надіслати</button>#}
+{#						</div>#}
+{#					</div>#}
+{#				</form>#}
+{#			</div>#}
+{#		</div>#}
+{#	</div>#}
+{#</section>#}
 <!-- /Contact -->
 {% endblock body %}
 <!-- Footer -->
