--- a/main/templates/main/news.html
+++ b/main/templates/main/news.html
@@ -61,135 +61,135 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 {% include 'baner_not_index.html' %}
 <!-- /banner section -->
 <!-- blog content -->
-<section class="blog-w3ls">
-	<div class="container">
-		<h3 class="text-center slideanim">Наші новини</h3>
-		<p class="text-center slideanim">Всі події ТОВ "Агрохолдинг 2012"</p>
-		<div class="row">
-			<!-- BLOG POSTS LIST -->
-			<div class="col-lg-8 slideanim">
-				<!-- Blog Post 1 -->
-				<a href="blogpost.html">
-					<div class="hover01 column">
-						<div>
-							<figure><img class="img-responsive" src={% static "images/blog-img1.jpg" %} alt="Vegetable Farm" title="Vegetable Farm"></figure>
-						</div>
-					</div>
-				</a>
-				<a href="blogpost.html" class="blog-link"><h3 class="ctitle">Закінчення посіву озимих культур</h3></a>
-				<p class="blog-p1"><small>Додано: 20 жовтня,2016.</small> | 3 коментаря</p>
-				<p class="blog-p2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				<p class="blog-p3"><a href="blogpost.html" class="btn-outline">Read More</a></p>
-				<div class="hline"></div>
-				<div class="spacing"></div>
-
-				<!-- Blog Post 2 -->
-				<a href="blogpost.html">
-					<div class="hover01 column">
-						<div>
-							<figure><img class="img-responsive" src={% static "images/blog-img2.jpg" %} alt="Vegetable Farm" title="Vegetable Farm"></figure>
-						</div>
-					</div>
-				</a>
-				<a href="blogpost.html" class="blog-link"><h3 class="ctitle">Vegetable Farm, You'll Love it.</h3></a>
-				<p class="blog-p1"><small>Додано: 20 жовтня,2016.</small> | 3 коментаря</p>
-				<p class="blog-p2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				<p class="blog-p3"><a href="blogpost.html" class="btn-outline">Read More</a></p>
-				<div class="hline"></div>
-				<div class="spacing"></div>
-
-				<!-- Blog Post 3 -->
-				<a href="blogpost.html">
-					<div class="hover01 column">
-						<div>
-							<figure><img class="img-responsive" src={% static "images/blog-img3.jpg" %} alt="Vegetable Farm" title="Vegetable Farm"></figure>
-						</div>
-					</div>
-				</a>
-				<a href="blogpost.html" class="blog-link"><h3 class="ctitle">Vegetable Farm, New & Improved.</h3></a>
-				<p class="blog-p1"><small>Додано: 20 жовтня,2016.</small> | 3 коментаря</p>
-				<p class="blog-p2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				<p class="blog-p3"><a href="blogpost.html" class="btn-outline">Read More</a></p>
-				<div class="hline"></div>
-			</div><!-- /col-lg-8 -->
-
-			<!-- SIDEBAR -->
-			<div class="col-lg-4 slideanim">
-				<h4>Пошук</h4>
-				<div class="hline"></div>
-				<form action="#" method="post">
-					<div class="input-group">
-						<input type="text" class="form-control" id="search" name="search" placeholder="Введіть для пошуку" required/>
-						<span class="input-group-btn">
-							<button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
-						</span>
-					</div>
-				</form>
-				<div class="spacing"></div>
-				<h4>Категорії</h4>
-				<div class="hline"></div>
-				<p class="blog-p4"><a href="#"><i class="fa fa-angle-right"></i> Паї</a> <span class="badge badge-theme pull-right">9</span></p>
-				<p class="blog-p4"><a href="#"><i class="fa fa-angle-right"></i> Посівна</a> <span class="badge badge-theme pull-right">3</span></p>
-				<p class="blog-p4"><a href="#"><i class="fa fa-angle-right"></i> Допомога в селах</a> <span class="badge badge-theme pull-right">11</span></p>
-				<p class="blog-p4"><a href="#"><i class="fa fa-angle-right"></i> Сільгосптехнології</a> <span class="badge badge-theme pull-right">5</span></p>
-				<p class="blog-p4"><a href="#"><i class="fa fa-angle-right"></i> Техніка</a> <span class="badge badge-theme pull-right">7</span></p>
-				<p class="blog-p4"><a href="#"><i class="fa fa-angle-right"></i> Фермерство</a> <span class="badge badge-theme pull-right">12</span></p>
-				<div class="spacing"></div>
-				<h4>Останні новини</h4>
-				<div class="hline"></div>
-				<ul class="popular-posts">
-					<li>
-						<a href="blogpost.html">
-							<img src={% static "images/blog-small1.jpg" %} alt="Popular Post">
-						</a>
-						<p class="blog-p5"><a href="blogpost.html">Lorem ipsum dolor sit amet consectetur adipiscing elit</a></p>
-						<em>Posted on 08/21/16</em>
-					</li>
-					<li>
-						<a href="blogpost.html">
-							<img src={% static "images/blog-small2.jpg" %} alt="Popular Post">
-						</a>
-						<p class="blog-p5"><a href="blogpost.html">Lorem ipsum dolor sit amet consectetur adipiscing elit</a></p>
-						<em>Posted on 09/01/16</em>
-					</li>
-					<li>
-						<a href="blogpost.html">
-							<img src={% static "images/blog-small3.jpg" %} alt="Popular Post">
-						</a>
-						<p class="blog-p5"><a href="blogpost.html">Lorem ipsum dolor sit amet consectetur adipiscing elit</a></p>
-						<em>Posted on 9/16/16</em>
-					</li>
-					<li>
-						<a href="blogpost.html">
-							<img src="images/blog-small4.jpg" alt="Popular Post">
-						</a>
-						<p class="blog-p5"><a href="blogpost.html">Lorem ipsum dolor sit amet consectetur adipiscing elit</a></p>
-						<em>Posted on 10/16/16</em>
-					</li>
-				</ul>
-				<div class="spacing"></div>
-				<h4>Popular Tags</h4>
-				<div class="hline"></div>
-				<p class="blog-p6">
-					<a class="btn btn-theme" href="#" role="button">Fertilizers</a>
-					<a class="btn btn-theme" href="#" role="button">Crop Rotation</a>
-					<a class="btn btn-theme" href="#" role="button">Weed Removal</a>
-					<a class="btn btn-theme" href="#" role="button">Breeding</a>
-					<a class="btn btn-theme" href="#" role="button">Fencing</a>
-					<a class="btn btn-theme" href="#" role="button">Ranching</a>
-					<a class="btn btn-theme" href="#" role="button">Arboriculture</a>
-					<a class="btn btn-theme" href="#" role="button">Turf management</a>
-					<a class="btn btn-theme" href="#" role="button">Floriculture</a>
-					<a class="btn btn-theme" href="#" role="button">Landscape horticulture</a>
-					<a class="btn btn-theme" href="#" role="button">Olericulture</a>
-					<a class="btn btn-theme" href="#" role="button">Pomology</a>
-					<a class="btn btn-theme" href="#" role="button">Viticulture</a>
-					<a class="btn btn-theme" href="#" role="button">Oenology</a>
-				</p>
-			</div>
-		</div><!-- /row -->
-	</div><!-- /container -->
-</section>
+{#<section class="blog-w3ls">#}
+{#	<div class="container">#}
+{#		<h3 class="text-center slideanim">Наші новини</h3>#}
+{#		<p class="text-center slideanim">Всі події ТОВ "Агрохолдинг 2012"</p>#}
+{#		<div class="row">#}
+{#			<!-- BLOG POSTS LIST -->#}
+{#			<div class="col-lg-8 slideanim">#}
+{#				<!-- Blog Post 1 -->#}
+{#				<a href="blogpost.html">#}
+{#					<div class="hover01 column">#}
+{#						<div>#}
+{#							<figure><img class="img-responsive" src={% static "images/blog-img1.jpg" %} alt="Vegetable Farm" title="Vegetable Farm"></figure>#}
+{#						</div>#}
+{#					</div>#}
+{#				</a>#}
+{#				<a href="blogpost.html" class="blog-link"><h3 class="ctitle">Закінчення посіву озимих культур</h3></a>#}
+{#				<p class="blog-p1"><small>Додано: 20 жовтня,2016.</small> | 3 коментаря</p>#}
+{#				<p class="blog-p2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>#}
+{#				<p class="blog-p3"><a href="blogpost.html" class="btn-outline">Read More</a></p>#}
+{#				<div class="hline"></div>#}
+{#				<div class="spacing"></div>#}
+{##}
+{#				<!-- Blog Post 2 -->#}
+{#				<a href="blogpost.html">#}
+{#					<div class="hover01 column">#}
+{#						<div>#}
+{#							<figure><img class="img-responsive" src={% static "images/blog-img2.jpg" %} alt="Vegetable Farm" title="Vegetable Farm"></figure>#}
+{#						</div>#}
+{#					</div>#}
+{#				</a>#}
+{#				<a href="blogpost.html" class="blog-link"><h3 class="ctitle">Vegetable Farm, You'll Love it.</h3></a>#}
+{#				<p class="blog-p1"><small>Додано: 20 жовтня,2016.</small> | 3 коментаря</p>#}
+{#				<p class="blog-p2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>#}
+{#				<p class="blog-p3"><a href="blogpost.html" class="btn-outline">Read More</a></p>#}
+{#				<div class="hline"></div>#}
+{#				<div class="spacing"></div>#}
+{##}
+{#				<!-- Blog Post 3 -->#}
+{#				<a href="blogpost.html">#}
+{#					<div class="hover01 column">#}
+{#						<div>#}
+{#							<figure><img class="img-responsive" src={% static "images/blog-img3.jpg" %} alt="Vegetable Farm" title="Vegetable Farm"></figure>#}
+{#						</div>#}
+{#					</div>#}
+{#				</a>#}
+{#				<a href="blogpost.html" class="blog-link"><h3 class="ctitle">Vegetable Farm, New & Improved.</h3></a>#}
+{#				<p class="blog-p1"><small>Додано: 20 жовтня,2016.</small> | 3 коментаря</p>#}
+{#				<p class="blog-p2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>#}
+{#				<p class="blog-p3"><a href="blogpost.html" class="btn-outline">Read More</a></p>#}
+{#				<div class="hline"></div>#}
+{#			</div><!-- /col-lg-8 -->#}
+{##}
+{#			<!-- SIDEBAR -->#}
+{#			<div class="col-lg-4 slideanim">#}
+{#				<h4>Пошук</h4>#}
+{#				<div class="hline"></div>#}
+{#				<form action="#" method="post">#}
+{#					<div class="input-group">#}
+{#						<input type="text" class="form-control" id="search" name="search" placeholder="Введіть для пошуку" required/>#}
+{#						<span class="input-group-btn">#}
+{#							<button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>#}
+{#						</span>#}
+{#					</div>#}
+{#				</form>#}
+{#				<div class="spacing"></div>#}
+{#				<h4>Категорії</h4>#}
+{#				<div class="hline"></div>#}
+{#				<p class="blog-p4"><a href="#"><i class="fa fa-angle-right"></i> Паї</a> <span class="badge badge-theme pull-right">9</span></p>#}
+{#				<p class="blog-p4"><a href="#"><i class="fa fa-angle-right"></i> Посівна</a> <span class="badge badge-theme pull-right">3</span></p>#}
+{#				<p class="blog-p4"><a href="#"><i class="fa fa-angle-right"></i> Допомога в селах</a> <span class="badge badge-theme pull-right">11</span></p>#}
+{#				<p class="blog-p4"><a href="#"><i class="fa fa-angle-right"></i> Сільгосптехнології</a> <span class="badge badge-theme pull-right">5</span></p>#}
+{#				<p class="blog-p4"><a href="#"><i class="fa fa-angle-right"></i> Техніка</a> <span class="badge badge-theme pull-right">7</span></p>#}
+{#				<p class="blog-p4"><a href="#"><i class="fa fa-angle-right"></i> Фермерство</a> <span class="badge badge-theme pull-right">12</span></p>#}
+{#				<div class="spacing"></div>#}
+{#				<h4>Останні новини</h4>#}
+{#				<div class="hline"></div>#}
+{#				<ul class="popular-posts">#}
+{#					<li>#}
+{#						<a href="blogpost.html">#}
+{#							<img src={% static "images/blog-small1.jpg" %} alt="Popular Post">#}
+{#						</a>#}
+{#						<p class="blog-p5"><a href="blogpost.html">Lorem ipsum dolor sit amet consectetur adipiscing elit</a></p>#}
+{#						<em>Posted on 08/21/16</em>#}
+{#					</li>#}
+{#					<li>#}
+{#						<a href="blogpost.html">#}
+{#							<img src={% static "images/blog-small2.jpg" %} alt="Popular Post">#}
+{#						</a>#}
+{#						<p class="blog-p5"><a href="blogpost.html">Lorem ipsum dolor sit amet consectetur adipiscing elit</a></p>#}
+{#						<em>Posted on 09/01/16</em>#}
+{#					</li>#}
+{#					<li>#}
+{#						<a href="blogpost.html">#}
+{#							<img src={% static "images/blog-small3.jpg" %} alt="Popular Post">#}
+{#						</a>#}
+{#						<p class="blog-p5"><a href="blogpost.html">Lorem ipsum dolor sit amet consectetur adipiscing elit</a></p>#}
+{#						<em>Posted on 9/16/16</em>#}
+{#					</li>#}
+{#					<li>#}
+{#						<a href="blogpost.html">#}
+{#							<img src="images/blog-small4.jpg" alt="Popular Post">#}
+{#						</a>#}
+{#						<p class="blog-p5"><a href="blogpost.html">Lorem ipsum dolor sit amet consectetur adipiscing elit</a></p>#}
+{#						<em>Posted on 10/16/16</em>#}
+{#					</li>#}
+{#				</ul>#}
+{#				<div class="spacing"></div>#}
+{#				<h4>Popular Tags</h4>#}
+{#				<div class="hline"></div>#}
+{#				<p class="blog-p6">#}
+{#					<a class="btn btn-theme" href="#" role="button">Fertilizers</a>#}
+{#					<a class="btn btn-theme" href="#" role="button">Crop Rotation</a>#}
+{#					<a class="btn btn-theme" href="#" role="button">Weed Removal</a>#}
+{#					<a class="btn btn-theme" href="#" role="button">Breeding</a>#}
+{#					<a class="btn btn-theme" href="#" role="button">Fencing</a>#}
+{#					<a class="btn btn-theme" href="#" role="button">Ranching</a>#}
+{#					<a class="btn btn-theme" href="#" role="button">Arboriculture</a>#}
+{#					<a class="btn btn-theme" href="#" role="button">Turf management</a>#}
+{#					<a class="btn btn-theme" href="#" role="button">Floriculture</a>#}
+{#					<a class="btn btn-theme" href="#" role="button">Landscape horticulture</a>#}
+{#					<a class="btn btn-theme" href="#" role="button">Olericulture</a>#}
+{#					<a class="btn btn-theme" href="#" role="button">Pomology</a>#}
+{#					<a class="btn btn-theme" href="#" role="button">Viticulture</a>#}
+{#					<a class="btn btn-theme" href="#" role="button">Oenology</a>#}
+{#				</p>#}
+{#			</div>#}
+{#		</div><!-- /row -->#}
+{#	</div><!-- /container -->#}
+{#</section>#}
 {% endblock body %}
 <!-- Footer -->
 {% block js %}
