--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="footer-col col-md-4">
                     <h4>Адреса</h4>
-{#                    <p>29000 Україна, м. Хмельницький, вул. Свободи, 79<br>тел. (0382)777-12-0</p>#}
+                    <p>29000 Україна, м. Хмельницький, вул. Свободи, 79<br>тел. (0382)777-12-0</p>
                 </div>
                 <div class="footer-col col-md-4">
                     <h4>Ми в інтернеті</h4>
