--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                     </ul>
                 </div>
                 <div class="footer-col col-md-4">
-                    <h4>Кредо ТОВ "Агрохолдинг 2012"</h4>
+                    <h4>ТОВ "Агрохолдинг 2012"</h4>
                     <p>Наші цілі, щоб українське село було бажаним для життя та праці в ньому, і ми підтримуємо напрямок України, як аграрної держави</p>
                 </div>
             </div>
