--- a/news/templates/news/content.html
+++ b/news/templates/news/content.html
@@ -25,11 +25,10 @@
 				<div class="spacing"></div>
 				<h4>Категорії</h4>
 				<div class="hline"></div>
-                    {% for cats in category %}
-                        {{ cats.name }}
+                {% load news_category %}
+                {% for cats in category %}
+                    <p class="blog-p4"><a href="#"><i class="fa fa-angle-right"></i> {{ cats.name }}</a> <span class="badge badge-theme pull-right">9</span></p>
                 {% endfor %}
-{#        <p class="blog-p4"><a href="#"><i class="fa fa-angle-right"></i> {{ cat.name }}</a> <span class="badge badge-theme pull-right">9</span></p>#}
-{#                    {% endfor %}#}
 {#            {% block category %}#}
 {#            {% endblock category %}#}
 {#				<p class="blog-p4"><a href="#"><i class="fa fa-angle-right"></i> Паї</a> <span class="badge badge-theme pull-right">9</span></p>#}
