--- a/news/templates/news/detail.html
+++ b/news/templates/news/detail.html
@@ -6,7 +6,7 @@
 <section class="blogpost-w3ls">
 	<div class="container">
 		<h3 class="text-center slideanim">{{ new.category }}</h3>
-		<p class="text-center slideanim">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+{#		<p class="text-center slideanim">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>#}
 		<div class="row">
 			<!-- SINGLE POST -->
 			<div class="col-lg-8 slideanim">
@@ -21,7 +21,7 @@
 					</div>
 
 				<a href="{{ new.get_absolute_url }}"><h3 class="ctitle">{{ new.title }}</h3></a>
-				<p class="blog-p1"><small>Додано: {{ new.posted }}</small> | 3 коментаря</p>
+				<p class="blog-p1"><small>Додано: {{ new.posted }}</small> | 3 комента</p>
 				<p class="blog-p2">{{ new.content }}</p>
 				<div class="spacing"></div>
 				<h4>Поділитись:</h4>
