--- a/main/templates/main/main_news.html
+++ b/main/templates/main/main_news.html
@@ -15,7 +15,7 @@
 						<div class="mask">
 							<h5>{{ new.posted }}</h5>
 							<p>{{ new.title }}</p>
-							<a href="{{ new.get_absolute_url }}" class="info">Детальніше</a>
+							<a href="{% url 'news' %}{{ new.slug }}" class="info">Детальніше</a>
 						</div>
 					</div>
 				</div>
@@ -23,7 +23,7 @@
 					<p class="p1">{{ new.posted }}</p>
 					<a href="{{ new.get_absolute_url }}"><h4>{{ new.title }}</h4></a>
 					<p class="p2">{{ new.content|truncatechars:100 }}</p>
-					<a href="{{ new.get_absolute_url }}">Більше</a>
+					<a href="{% url 'news' %}{{ new.slug }}">Більше...</a>
 				</div>
 			</div>
     {% endfor %}
