--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -2,7 +2,7 @@
 {% block head %}
 <head>
 {% load staticfiles %}
-<title>ТОВ "Агрохолдинг 2012" ::: Новини</title>
+{% block title %}<title>ТОВ "Агрохолдинг 2012" ::: Новини</title>{% endblock title %}
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Vegetable Farm Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
