--- a/news/templates/news/list.html
+++ b/news/templates/news/list.html
@@ -16,7 +16,7 @@
 					</div>
 				</a>
 				<a href="{{ news.get_absolute_url }}" class="blog-link"><h3 class="ctitle">{{ news.title }}</h3></a>
-				<p class="blog-p1"><small>Додано: {{ news.posted }}</small> | 3 коментаря</p>
+				<p class="blog-p1"><small>Додано: {{ news.posted }}</small></p>
 				<p class="blog-p2">{{ news.content }}</p>
 				<p class="blog-p3"><a href="{{ news.get_absolute_url }}" class="btn-outline">більше</a></p>
 				<div class="hline"></div>
