--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -49,7 +49,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<li><a href="{% url 'about' %}">Про нас</a></li>
 				<li><a href="{% url 'news' %}">Новини</a></li>
 				<li><a href="{% url 'main' %}">Галерея</a></li>
-				<li><a href="{% url 'main' %}">Аренда землі</a></li>
+				<li><a href="{% url 'main' %}">Орендодавцю</a></li>
 				<li class="active"><a href="{% url 'contact' %}">Контакти</a></li>
           </ul>
         </div><!--/.nav-collapse -->
