--- a/office/templates/office/offices.html
+++ b/office/templates/office/offices.html
@@ -2,7 +2,7 @@
 {% block offices %}
 <section class="contact-us" id="contact">
 	<h3 class="text-center slideanim">Наші контакти</h3>
-	<p class="text-center slideanim">Контакти головного, та регіональних офісів ТОВ "Агрохолдинг 2012"</p>
+	<p class="text-center slideanim">Контакти центрального, та регіональних офісів ТОВ "Агрохолдинг 2012"</p>
 	<div class="container">
 		<div class="row">
             {% for office in object_list %}
