--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -52,7 +52,7 @@
 				<li class="active"><a href="{% url 'about' %}">Про нас</a></li>
 				<li><a href="{% url 'news' %}">Новини</a></li>
 				<li><a href="{% url 'main' %}">Галерея</a></li>
-				<li><a href="{% url 'main' %}">Аренда землі</a></li>
+				<li><a href="{% url 'main' %}">Орендодавцю</a></li>
 				<li><a href="{% url 'contact' %}">Контакти</a></li>
           </ul>
         </div><!--/.nav-collapse -->
