--- a/main/templates/main/main_news.html
+++ b/main/templates/main/main_news.html
@@ -22,7 +22,7 @@
 				<div class="blog-content slideanim">
 					<p class="p1">{{ new.posted }}</p>
 					<a href="{{ new.get_absolute_url }}"><h4>{{ new.title }}</h4></a>
-					<p class="p2">{{ new.content|truncatechars:100 }}</p>
+					<p class="p2">{{ new.content|truncatechars:100|safe }}</p>
 					<a href="{% url 'news' %}{{ new.slug }}">Більше...</a>
 				</div>
 			</div>
