--- a/news/templates/news/category.html
+++ b/news/templates/news/category.html
@@ -17,7 +17,7 @@
 				</a>
 				<a href="{{ new.get_absolute_url }}" class="blog-link"><h3 class="ctitle">{{ new.title }}</h3></a>
 				<p class="blog-p1"><small>Додано: {{ new.posted }}</small></p>
-				<p class="blog-p2">{{ new.content }}</p>
+				<p class="blog-p2">{{ new.content }}</p><br>
 				<p class="blog-p3"><a href="{{ new.get_absolute_url }}" class="btn-outline">більше</a></p>
 				<div class="hline"></div>
 				<div class="spacing"></div>
