--- a/news/templates/news/detail.html
+++ b/news/templates/news/detail.html
@@ -21,8 +21,8 @@
 					</div>
 
 				<a href="{{ new.get_absolute_url }}"><h3 class="ctitle">{{ new.title }}</h3></a>
-				<p class="blog-p1"><small>Додано: {{ new.posted }}</small> | 3 комента</p>
-				<p class="blog-p2">{{ new.content }}</p>
+				<p class="blog-p1"><small>Додано: {{ new.posted }}</small></p>
+				<p class="blog-p2">{{ new.content|safe }}</p>
 				<div class="spacing"></div>
 				<h4>Поділитись:</h4>
 				<ul class="list-inline">
