--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Агрохолдинг 2012, агрохолдинг, аграрії, паї, земля" />
+<link rel="shortcut icon" type="image/png" href={% static 'images_agroholding/favicon.ico' %}/>
 <!-- css links -->
 <link href={% static "css/bootstrap.min.css" %} rel="stylesheet" type="text/css" media="all" />
 <link href={% static "css/font-awesome.min.css" %} rel="stylesheet" type="text/css" media="all" />
